Fix #23404 - [Feature] Create document aspect - fix init repo + locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -37,7 +37,7 @@ path.controlunits                        = Control units
 path.costs                               = Costs
 path.customscodes                        = Customs Codes
 path.datacarriertypecode                 = Types of barcode
-path.documenttype                        = Document types
+path.documenttypes                       = Document types
 path.dutyfeetaxagencycodes               = Tax agencies
 path.dutyfeetaxcategorycodes             = Tax categories
 path.dutyfeetaxes                        = Taxes
