--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -89,7 +89,7 @@ data.list.costList                            = Costs
 data.list.customsCode                         = Customs Codes
 data.list.datacarriertypecode                 = Types of barcode
 data.list.deliverableList                     = Deliverables
-data.list.documenttype                        = Document types
+data.list.documenttypes                       = Document types
 data.list.dutyfeetaxagencycodes               = Tax agencies
 data.list.dutyfeetaxcategorycodes             = Tax categories
 data.list.dutyfeetaxes                        = Taxes
