--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -9,6 +9,7 @@ bcpg_bcpgmodel.aspect.bcpg_consumerAspect.description                           
 bcpg_bcpgmodel.aspect.bcpg_consumerAspect.title                                 = Information for consumers
 bcpg_bcpgmodel.aspect.bcpg_customsCodeAspect.description                        = Aspect customs code
 bcpg_bcpgmodel.aspect.bcpg_customsCodeAspect.title                              = Aspect customs code
+bcpg_bcpgmodel.aspect.bcpg_documentAspect.title                                 = Aspect document type
 bcpg_bcpgmodel.aspect.bcpg_eanAspect.description                                = GTIN/EAN
 bcpg_bcpgmodel.aspect.bcpg_eanAspect.title                                      = GTIN/EAN
 bcpg_bcpgmodel.aspect.bcpg_ecoScoreAspect.title                                 = Aspect ecological score
