Fix #23404 - [Feature] Create document aspect - fix adv search

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
@@ -1,6 +1,7 @@
 
 aspect.bcpg_autoMergeAspect         = Automatic version merge
 aspect.bcpg_docLinkedEntitiesAspect = Document entities link
+aspect.bcpg_documentAspect          = Document
 aspect.bcpg_entityBranchAspect      = Branch
 aspect.bcpg_entityTplAspect         = Entity template
 aspect.bcpg_entityVariantAspect     = Variant
