--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -229,10 +229,10 @@ bcpg_bcpgmodel.property.bcpg_costListValuePerProduct.title                      
 bcpg_bcpgmodel.property.bcpg_costType.title                                     = Type
 bcpg_bcpgmodel.property.bcpg_cstsCode.title                                     = Code
 bcpg_bcpgmodel.property.bcpg_cstsCodeType.title                                 = Type
-bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDate.title                    = Automatic ex\u00EEration (d)
+bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title                   = Automatic ex\u00EEration (d)
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title                              = Path
+bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title                       = Effectivity type
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title                           = Is mandatory
-bcpg_bcpgmodel.property.bcpg_docTypeIsValidityType.title                        = Validity type
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       = Related families
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Entity types
 bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formula
@@ -742,6 +742,9 @@ listconstraint.bcpg_declarationTypes.DoNotDetailsAtEnd                = Put at t
 listconstraint.bcpg_declarationTypes.Group                            = Group
 listconstraint.bcpg_declarationTypes.Kit                              = Kit  
 listconstraint.bcpg_declarationTypes.Omit                             = Omit
+listconstraint.bcpg_documentEffectivityTypes.AUTO                     = Automatic
+listconstraint.bcpg_documentEffectivityTypes.MANUAL                   = Manual
+listconstraint.bcpg_documentEffectivityTypes.NONE                     = None
 listconstraint.bcpg_documentStates.Archived                           = Archived
 listconstraint.bcpg_documentStates.OnHold                             = On hold
 listconstraint.bcpg_documentStates.Refused                            = Refused
@@ -861,9 +864,6 @@ listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensitiz
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationLeaveOn          = Skin irritation leave-on
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationRinseOff         = Skin irritation rinse-off
 listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Systemic ingredient
-listconstraint.bcpg_validityTypes_AUTO                                = Automatic
-listconstraint.bcpg_validityTypes_MANUAL                              = Manual
-listconstraint.bcpg_validityTypes_NONE                                = None
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variant 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variant 2
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variant 3
