--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -13,7 +13,7 @@
 		<version>23.4.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.4.1.18</version>
+    <version>23.4.1.19-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
