Fix #27448 - [Feature] Add EntityReportJob to generate version reports

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
@@ -96,6 +96,8 @@ beCPG.version.cleaner.maxProcessedNodes=500
 # 1048576 bytes = 1mB
 beCPG.report.image.maxSizeInBytes=1048576
 beCPG.report.datasource.maxSizeInBytes=1048576
+beCPG.report.job.enabled=true
+beCPG.report.job.cronExpression=0 */5 * ? * *
 
 #Solr backup
 beCPG.solr.alfresco.core=alfresco
