--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches.properties
@@ -7,18 +7,17 @@ becpg.batch.eco.calculateWUsed                      = Calculation of where used 
 becpg.batch.eco.close                               = Closing of change order {0}
 becpg.batch.eco.impactWUsed                         = Impacting where used of change order {0}
 becpg.batch.eco.simulate                            = Simulation of change order {0}
-becpg.batch.entity.generateReports                  = Generating reports {0}
+becpg.batch.entity.generatePendingReports           = Generating reports
 becpg.batch.entityArchiving                         = Archiving entity {0}
 becpg.batch.entityArchiving.archiving               = Archiving
 becpg.batch.entityArchiving.formulation             = Formulation
 becpg.batch.entityArchiving.reports                 = Generating reports
 becpg.batch.entityTpl.deleteReports                 = Deleting reports
 becpg.batch.entityTpl.formulateEntities             = Formulation of entities
-becpg.batch.entityTpl.generateReports               = Generating reports of template entities
 becpg.batch.entityTpl.removeDataList                = Removing datalists of template entities
 becpg.batch.entityTpl.synchronizeEntities           = Synchronizing template entities
+becpg.batch.entityTpl.updatePermissions             = Update permissions of report template entities {0}
 becpg.batch.entityUnarchiving                       = Unarchiving entity {0}
-becpg.batch.entityVersion.generateReports           = Generating version reports {0}
 becpg.batch.import                                  = Importing file ''{0}''
 becpg.batch.productSpecification.formulation        = Formulation of product specification: {0}
 becpg.batch.versionCleaner.cleanOrphanVersions      = Cleaning orphan versions
