Fix #23404 - [Feature] Create document aspect - add cm:content in product-list

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get.properties
@@ -5,6 +5,7 @@ button.show-thumbnails = Show thumbnails
 filter.Archived       = Archived
 filter.Compliant      = Compliant
 filter.NonCompliant   = Non compliant
+filter.OnHold         = On hold
 filter.Refused        = Refused
 filter.Simulation     = Simulation
 filter.Stopped        = Stopped
