--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -173,6 +173,7 @@ type.bcpg_rawMaterial              = Raw material
 type.bcpg_resourceProduct          = Resource
 type.bcpg_semiFinishedProduct      = Semi finished
 type.bcpg_supplier                 = Supplier
+type.cm_content                    = Content
 type.ecm_changeOrder               = Change order
 type.qa_batch                      = Process order
 type.qa_controlMethod              = Control method
