--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -13,7 +13,7 @@
 		<version>23.4.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.4.2.0-SNAPSHOT</version>
+    <version>23.4.2.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
@@ -453,4 +453,8 @@
 	</profiles>
 
 
+
+  <scm>
+    <tag>23.4.2.0</tag>
+  </scm>
 </project>
