ix #23404 - [Feature] Create document aspect - fix cm:content filter

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -223,6 +223,7 @@ becpg.forms.set.secondaryPackaging.label                       = Logistical unit
 becpg.forms.set.security.label                                 = Security
 becpg.forms.set.securityRule.label                             = Security rule
 becpg.forms.set.selected-products.label                        = Products selection
+becpg.forms.set.supplier-info.label                            = Supplier Information
 becpg.forms.set.survey-criteria.label                          = Survey criteria
 becpg.forms.set.svhc-criteria.label                            = Dangerous substances criteria
 becpg.forms.set.tertiaryPackaging.label                        = Ti/Hi information
