--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.4.2.1-SNAPSHOT</version>
+	<version>23.4.2.1</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
@@ -67,6 +67,6 @@
 
 
   <scm>
-    <tag>23.4.2.0</tag>
+    <tag>23.4.2.1</tag>
   </scm>
 </project>
