Fix #23404 - [Feature] Create document aspect - add beCPG code

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
@@ -1,6 +1,7 @@
 
 autonum.prefix.changeOrder.code              = ECO
 autonum.prefix.client.code                   = C
+autonum.prefix.content.code                  = DOC
 autonum.prefix.controlPlan.code              = CP
 autonum.prefix.finishedProduct.code          = FP
 autonum.prefix.linkedValue.code              = LNK
