Fix #23404 - [Feature] Create documentTypeon core + move properties from plm to core

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -34,6 +34,27 @@ basket.add.label  = Basket
 basket.add.tip    = Add
 basket.remove.tip = Remove
 
+becpg.faceted-search.date.next-one-month.label     = Next month
+becpg.faceted-search.date.next-one-week.label      = Next week
+becpg.faceted-search.date.next-one-year.label      = Next year
+becpg.faceted-search.date.next-six-months.label    = Next 6 months
+becpg.faceted-search.date.next-six-years.label     = Next 6 years
+becpg.faceted-search.date.next-three-months.label  = Next 3 months
+becpg.faceted-search.date.next-three-years.label   = Next 3 years
+becpg.faceted-search.date.next-two-weeks.label     = 2 next weeks
+becpg.faceted-search.date.next-two-years.label     = Next 2 years
+becpg.faceted-search.date.one-day.label            = Today
+becpg.faceted-search.date.one-month.label          = Previous month
+becpg.faceted-search.date.one-week.label           = Previous week
+becpg.faceted-search.date.one-year.label           = Previous year
+becpg.faceted-search.date.six-months.label         = Previous 6 months
+becpg.faceted-search.date.six-years.label          = Previous 6 years
+becpg.faceted-search.date.three-months.label       = Previous 3 months
+becpg.faceted-search.date.three-years.label        = Previous 3 year
+becpg.faceted-search.date.two-weeks.label          = Previous 2 weeks
+becpg.faceted-search.date.two-years.label          = Previous 2 years
+becpg.faceted-search.facet-menu.facet.from         = Effective from
+becpg.faceted-search.facet-menu.facet.to           = Effective to
 becpg.forms.help.notificationFrequency             = For Daily notify set to Day. \nFor Weekly notify set to Week. \nFor Monthly notify set to Month.\nFor Yearly notify set to Year. \n
 becpg.forms.help.notificationTimeType              = # X days before date =>  \n[MIN , (NOW-x)].  \n\n# X days after date =>  \n[(NOW+X) , MAX].  \n\n# From X days =>  \n[(NOW-X) , NOW].  \n\n# In less than X days =>  \n[NOW , (NOW+X)].  \n\n# X days to date: \ndate field equals to (NOW+X). \n\n# X is the integer declared in X days field.
 becpg.forms.help.nrConditions                      = Add fts query for more adequate filtering (@cm\\:name:"product name").
