--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -30,6 +30,8 @@ actions.entityTpl-formulate-entities    = Formulate entities
 actions.entityTpl-synchronize-entities  = Synchronize entities
 actions.reportTpl-update-permissions    = Update permissions
 
+alert.popup.blocked = Popup blocked. Please allow popups for this site.
+
 basket.add.label  = Basket
 basket.add.tip    = Add
 basket.remove.tip = Remove
@@ -50,6 +52,7 @@ button.columns-conf.description = Columns configuration
 button.copy.to.clipboard        = Copy shareable links
 button.export-csv               = &nbsp;
 button.export-csv.description   = Export
+button.reauth.validate          = Re-authenticate to validate
 button.wused                    = Where used
 
 dashlet.my-olapchart.description = BI Component
@@ -61,6 +64,8 @@ details.effectivity.from   = Valid from {0}
 details.effectivity.fromto = Valid from {0} to {1}
 details.effectivity.none   = No effectivity
 details.effectivity.to     = Valid to {0}
+
+error.reauth.failed = Re-authentication failed.
 
 file.status-doc   = ({0} out of {1} entities added)
 file.status-excel = ({0} out of {1} entities added)
@@ -115,15 +120,15 @@ linkshare.action.google-plus.label = Share using Google+
 linkshare.action.twitter.label     = Share using Twitter
 linkshare.action.twitter.message   = File {1} shared from beCPG
 
-menu.basket.empty                  = Empty basket
-menu.basket.show                   = Show basket
-menu.create-content.entity         = Entity...
-menu.create-content.externalLink   = External link...
-menu.selected-items.assign-process = Start process...
-menu.selected-items.basket         = Add to basket
-menu.selected-items.lock           = Lock item(s)
-menu.selected-items.quick-share    = Share documents
-menu.selected-items.unlock         = Unlock item(s)
+menu.basket.empty                           = Empty basket
+menu.basket.show                            = Show basket
+menu.create-content.entity                  = Entity...
+menu.create-content.externalLink            = External link...
+menu.selected-items.assign-process          = Start process...
+menu.selected-items.basket                  = Add to basket
+menu.selected-items.lock                    = Lock item(s)
+menu.selected-items.quick-share             = Share documents
+menu.selected-items.unlock                  = Unlock item(s)
 menu.selected-items.update-supplier-account = Update supplier account
 
 message.annotation-cancel.failure             = Could not cancel annotations
