Fix #28065 - [Feature] Add reauth deliverable support

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -52,6 +52,7 @@ button.columns-conf.description = Columns configuration
 button.copy.to.clipboard        = Copy shareable links
 button.export-csv               = &nbsp;
 button.export-csv.description   = Export
+button.reauth.save              = Re-authenticate to save
 button.reauth.validate          = Re-authenticate to validate
 button.wused                    = Where used
 
