Fix #23404 - [Feature] Create documentType - fix locale + add BeCPGModel constant

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -72,10 +72,10 @@ bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Level
 bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title   = Automatic ex\u00EEration (d)
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title              = Path
 bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title       = Effectivity type
+bcpg_bcpgmodel.property.bcpg_docTypeFormula.title               = Formula
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title           = Is mandatory
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title       = Related families
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title           = Entity types
-bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title      = Formula
 bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title            = Name format
 bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title          = Is mandatory
 bcpg_bcpgmodel.property.bcpg_documentState.title                = Document state
