--- a/becpg-project/becpg-project-share/pom.xml
+++ b/becpg-project/becpg-project-share/pom.xml
@@ -7,7 +7,7 @@
 		<relativePath>../../</relativePath>
 	</parent>
     <modelVersion>4.0.0</modelVersion>
- <version>23.4.2.3</version>
+ <version>23.4.2.4-SNAPSHOT</version>
 	<artifactId>becpg-project-share</artifactId>
 	<packaging>jar</packaging>
 	<name>beCPG Project Share</name>
@@ -41,6 +41,6 @@
 
 
   <scm>
-    <tag>23.4.2.3</tag>
+    <tag>23.4.2.0</tag>
   </scm>
 </project>
