--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.0.66</version>
+    <version>23.2.0.67-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
