Fix #23404 - [Feature] Add aiValidation and ai aspects

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -1,4 +1,6 @@
 
+bcpg_bcpgmodel.aspect.bcpg_aiAspect.title                       = AI
+bcpg_bcpgmodel.aspect.bcpg_aiValidationAspect.title             = AI Validation
 bcpg_bcpgmodel.aspect.bcpg_autoMergeAspect.title                = Automatic version merge
 bcpg_bcpgmodel.aspect.bcpg_codeAspect.description               = Code
 bcpg_bcpgmodel.aspect.bcpg_codeAspect.title                     = Code
@@ -54,6 +56,12 @@ bcpg_bcpgmodel.association.bcpg_nrScript.title                  = Script
 bcpg_bcpgmodel.association.bcpg_nrTarget.title                  = Inside folder
 bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Parent entity
 bcpg_bcpgmodel.description                                      = beCPG domain model
+bcpg_bcpgmodel.property.bcpg_aiExtraPrompt.title                = Extra prompt
+bcpg_bcpgmodel.property.bcpg_aiSuggestedFields.title            = Suggested fields
+bcpg_bcpgmodel.property.bcpg_aiValidationCriteria.title         = AI validation criteria
+bcpg_bcpgmodel.property.bcpg_aiValidationDate.title             = IA validation date
+bcpg_bcpgmodel.property.bcpg_aiValidationHints.title            = Hints
+bcpg_bcpgmodel.property.bcpg_aiValidationState.title            = AI validation state
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Activity type
 bcpg_bcpgmodel.property.bcpg_alUserId.title                     = User
 bcpg_bcpgmodel.property.bcpg_autoMergeComments.title            = Comments
@@ -167,6 +175,9 @@ listconstraint.bcpg_activityTypes.Formulation               = Formulation
 listconstraint.bcpg_activityTypes.Merge                     = Merge
 listconstraint.bcpg_activityTypes.Report                    = Report
 listconstraint.bcpg_activityTypes.State                     = State
+listconstraint.bcpg_aiValidationStates.Refused              = Refused
+listconstraint.bcpg_aiValidationStates.ToValidate           = To validate
+listconstraint.bcpg_aiValidationStates.Valid                = Valid
 listconstraint.bcpg_documentEffectivityTypes.AUTO           = Automatic
 listconstraint.bcpg_documentEffectivityTypes.MANUAL         = Manual
 listconstraint.bcpg_documentEffectivityTypes.NONE           = None
