--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -145,6 +145,8 @@ becpg.forms.help.variableWeightAllowableDeviationPercentage    = Indication of t
 becpg.forms.help.variableWeightRangeMinimum                    = Variable Weight Range Minimum (also called Catch weight Range Minimum) identifies the lowest weight of the variable weight product.
 becpg.forms.help.variantIds                                    = Select an item in the list if you want to have variants.
 becpg.forms.set.ac-info.label                                  = Corrective action
+becpg.forms.set.ai-validation.label                            = AI Validation
+becpg.forms.set.ai.label                                       = AI
 becpg.forms.set.alcohol.label                                  = Alcohol information
 becpg.forms.set.allergens-claims.label                         = Allergens and label claims
 becpg.forms.set.animalFeeding.label                            = Animal feeding
