--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
@@ -1,4 +1,6 @@
 
+aspect.bcpg_aiAspect                = AI
+aspect.bcpg_aiValidationAspect      = AI Validation
 aspect.bcpg_autoMergeAspect         = Automatic version merge
 aspect.bcpg_docLinkedEntitiesAspect = Document entities link
 aspect.bcpg_documentAspect          = Document
