Fix #23404 - [Feature] Remove AI mandatory aspect + fix properties

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -59,7 +59,7 @@ bcpg_bcpgmodel.description                                      = beCPG domain m
 bcpg_bcpgmodel.property.bcpg_aiExtraPrompt.title                = Extra prompt
 bcpg_bcpgmodel.property.bcpg_aiSuggestedFields.title            = Suggested fields
 bcpg_bcpgmodel.property.bcpg_aiValidationCriteria.title         = AI validation criteria
-bcpg_bcpgmodel.property.bcpg_aiValidationDate.title             = IA validation date
+bcpg_bcpgmodel.property.bcpg_aiValidationDate.title             = AI validation date
 bcpg_bcpgmodel.property.bcpg_aiValidationHints.title            = Hints
 bcpg_bcpgmodel.property.bcpg_aiValidationState.title            = AI validation state
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Activity type
