--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
- <version>23.4.2.4</version>
+ <version>23.4.2.5-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -42,6 +42,6 @@
 
 
   <scm>
-    <tag>23.4.2.4</tag>
+    <tag>23.4.2.0</tag>
   </scm>
 </project>
