Fix #24656 - [Bug] I18N key issue

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get.properties
@@ -5,9 +5,9 @@ button.bulk-action-create                    = Bulk create
 button.create-saved-search                   = &nbsp;
 button.create-saved-search.description       = Create a new saved search
 button.delete-saved-search                   = &nbsp;
-button.delete-saved-search.description       = Delete selected saved search button.duplicate-saved-search = &nbsp;
+button.delete-saved-search.description       = Delete selected saved search
 button.duplicate-saved-search                = &nbsp;
-button.duplicate-saved-search.description    = Create a copy of the selected saved search button.edit-saved-search = &nbsp;
+button.duplicate-saved-search.description    = Create a copy of the selected saved search
 button.edit-saved-search                     = &nbsp;
 button.edit-saved-search.description         = Edit details of selected saved search
 button.entity-actions                        = Actions
