Fix #28282 - [I18N] Add missing keys

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -122,6 +122,7 @@ data.list.import                              = Import
 data.list.importfailed                        = Import failed
 data.list.importlog                           = Logs
 data.list.importsamples                       = Samples
+data.list.scoreCriterion                      = Score criteria
 data.list.importsucceeded                     = Import succeeded
 data.list.importtodo                          = Import to do
 data.list.importtotreat                       = Import to treat
