Fix #23404 - [Feature] Add document formulation

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -183,3 +183,7 @@ type.qa_controlStep                = Control step
 type.qa_nc                         = Non-conformity
 type.qa_qualityControl             = Quality control
 type.qa_workItemAnalysis           = Work item of analysis
+
+status.ai-valid=AI Validated
+status.ai-refused=AI Refused
+status.document-mandatory=Mandatory Document Type
