InProgress #24826 - [Feature] Add suggestion panel on documents

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -1,34 +1,43 @@
 
-actions.datalist.copy-to                = Copy list to...
-actions.datalist.import-from            = Import list from...
-actions.document.branch-entity          = Create new version
-actions.document.cancel-checkout-entity = Cancel new version
-actions.document.checkin-entity         = Check in new version
-actions.document.checkout-entity        = Create new version
-actions.document.merge-entity           = Merge version
-actions.document.open-link              = Open link
-actions.document.refreshReports         = Refresh reports
-actions.document.viewDesigner           = Edit model
-actions.entity.associated-process       = Associated processes
-actions.entity.associated-project       = Associated projects
-actions.entity.associated-workflow      = Associated workflows
-actions.entity.compare                  = Compare with...
-actions.entity.create-supplier          = Create supplier account
-actions.entity.delete                   = Delete
-actions.entity.download-report          = Download
-actions.entity.send-to-supplier         = Send to supplier
-actions.entity.view-datalists           = View data lists
-actions.entity.view-datalists.short     = Data lists
-actions.entity.view-details             = View details
-actions.entity.view-details.short       = Details
-actions.entity.view-documents           = View documents
-actions.entity.view-documents.short     = Documents
-actions.entity.view-reports             = View reports
-actions.entity.view-reports.short       = Reports
-actions.entity.wused                    = Where used
-actions.entityTpl-formulate-entities    = Formulate entities
-actions.entityTpl-synchronize-entities  = Synchronize entities
-actions.reportTpl-update-permissions    = Update permissions
+action.ai-suggestion                       = AI Suggestions
+
+actions.datalist.copy-to                   = Copy list to...
+actions.datalist.import-from               = Import list from...
+actions.document.ai-suggestion             = AI Suggestions
+actions.document.ai-suggestion.description = Show AI suggestions for this document
+actions.document.branch-entity             = Create new version
+actions.document.cancel-checkout-entity    = Cancel new version
+actions.document.checkin-entity            = Check in new version
+actions.document.checkout-entity           = Create new version
+actions.document.merge-entity              = Merge version
+actions.document.open-link                 = Open link
+actions.document.refreshReports            = Refresh reports
+actions.document.viewDesigner              = Edit model
+actions.entity.associated-process          = Associated processes
+actions.entity.associated-project          = Associated projects
+actions.entity.associated-workflow         = Associated workflows
+actions.entity.compare                     = Compare with...
+actions.entity.create-supplier             = Create supplier account
+actions.entity.delete                      = Delete
+actions.entity.download-report             = Download
+actions.entity.send-to-supplier            = Send to supplier
+actions.entity.view-datalists              = View data lists
+actions.entity.view-datalists.short        = Data lists
+actions.entity.view-details                = View details
+actions.entity.view-details.short          = Details
+actions.entity.view-documents              = View documents
+actions.entity.view-documents.short        = Documents
+actions.entity.view-reports                = View reports
+actions.entity.view-reports.short          = Reports
+actions.entity.wused                       = Where used
+actions.entityTpl-formulate-entities       = Formulate entities
+actions.entityTpl-synchronize-entities     = Synchronize entities
+actions.reportTpl-update-permissions       = Update permissions
+
+ai.suggestion.tip       = Show AI suggestions for this document
+
+aisuggestion.show.label = AI Suggestions
+aisuggestion.show.tip   = Show AI suggestions for this document
 
 alert.popup.blocked = Popup blocked. Please allow popups for this site.
 
@@ -156,6 +165,7 @@ menu.selected-items.quick-share             = Share documents
 menu.selected-items.unlock                  = Unlock item(s)
 menu.selected-items.update-supplier-account = Update supplier account
 
+message.ai.suggestion.not.available           = AI suggestions not available for this document. Document must have a validation date.
 message.annotation-cancel.failure             = Could not cancel annotations
 message.annotation-cancel.inprogress          = Cancelling annotations
 message.annotation-checkin.failure            = Could not checkin annotations
