--- a/becpg-project/becpg-project-share/pom.xml
+++ b/becpg-project/becpg-project-share/pom.xml
@@ -7,7 +7,7 @@
 		<relativePath>../../</relativePath>
 	</parent>
     <modelVersion>4.0.0</modelVersion>
- <version>23.4.2.7</version>
+ <version>23.4.2.8-SNAPSHOT</version>
 	<artifactId>becpg-project-share</artifactId>
 	<packaging>jar</packaging>
 	<name>beCPG Project Share</name>
