Fix #24826 - [Feature] Add suggestion panel on documents

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
@@ -170,6 +170,7 @@ logger.becpg-test.level=debug
 #  
 #logger.DebugSearch2.name=fr.becpg.repo.solr
 #logger.DebugSearch2.level=debug
-  
-  
+
+logger.beanpostprocessor.name=org.springframework.context.support.PostProcessorRegistrationDelegate
+logger.beanpostprocessor.level=error
   
