--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -137,6 +137,9 @@ search.form.label.qa_batch                  = Process order
 search.form.label.qa_nc                     = Non-conformities
 search.form.label.qa_qualityControl         = Quality control
 
+status.ai-refused           = Chef AI refused
+status.ai-valid             = Chef AI validated
+status.document-mandatory   = Mandatory Document Type
 status.ecm-applied          = Applied
 status.ecm-automatic        = Automatic
 status.ecm-cancelled        = Cancelled
@@ -183,7 +186,3 @@ type.qa_controlStep                = Control step
 type.qa_nc                         = Non-conformity
 type.qa_qualityControl             = Quality control
 type.qa_workItemAnalysis           = Work item of analysis
-
-status.ai-valid=AI Validated
-status.ai-refused=AI Refused
-status.document-mandatory=Mandatory Document Type
