--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -1,9 +1,9 @@
 
-action.ai-suggestion                       = AI Suggestions
+action.ai-suggestion                       = Suggestions
 
 actions.datalist.copy-to                   = Copy list to...
 actions.datalist.import-from               = Import list from...
-actions.document.ai-suggestion             = AI Suggestions
+actions.document.ai-suggestion             = Suggestions
 actions.document.ai-suggestion.description = Show AI suggestions for this document
 actions.document.branch-entity             = Create new version
 actions.document.cancel-checkout-entity    = Cancel new version
@@ -36,8 +36,8 @@ actions.reportTpl-update-permissions       = Update permissions
 
 ai.suggestion.tip       = Show AI suggestions for this document
 
-aisuggestion.show.label = AI Suggestions
-aisuggestion.show.tip   = Show AI suggestions for this document
+aisuggestion.show.label = Suggestions
+aisuggestion.show.tip   = Show Chef AI suggestions for this document
 
 alert.popup.blocked = Popup blocked. Please allow popups for this site.
 
