--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -41,6 +41,7 @@ bcpg_bcpgmodel.association.bcpg_consumerGroups.title            = Consumer group
 bcpg_bcpgmodel.association.bcpg_contributorGroups.title         = Contributor groups
 bcpg_bcpgmodel.association.bcpg_docLinkedEntities.title         = Linked entities
 bcpg_bcpgmodel.association.bcpg_docTypeLinkedCharacts.title     = Related characteristics
+bcpg_bcpgmodel.association.bcpg_docTypeLinkedHierarchy.title    = Related families
 bcpg_bcpgmodel.association.bcpg_documentEntityRef.title         = Document entity
 bcpg_bcpgmodel.association.bcpg_documentTypeRef.title           = Document type
 bcpg_bcpgmodel.association.bcpg_editorGroups.title              = Editor groups
@@ -56,7 +57,6 @@ bcpg_bcpgmodel.association.bcpg_nrScript.title                  = Script
 bcpg_bcpgmodel.association.bcpg_nrTarget.title                  = Inside folder
 bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Parent entity
 bcpg_bcpgmodel.description                                      = beCPG domain model
-
 bcpg_bcpgmodel.property.bcpg_aiExtraPrompt.title                = Extra prompt
 bcpg_bcpgmodel.property.bcpg_aiSuggestedFields.title            = Suggested fields
 bcpg_bcpgmodel.property.bcpg_aiValidationCriteria.title         = AI validation criteria
@@ -84,7 +84,6 @@ bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title              = Path
 bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title       = Effectivity type
 bcpg_bcpgmodel.property.bcpg_docTypeFormula.title               = Formula
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title           = Is mandatory
-bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title       = Related families
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title           = Entity types
 bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title            = Name format
 bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title          = Is mandatory
