--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
@@ -33,18 +33,24 @@ data.revisiontype.major      = Major
 data.revisiontype.minor      = Minor
 data.revisiontype.norevision = No revision
 
-status.document-archived   = Archived
-status.document-refused    = Refused
-status.document-simulation = Simulation
-status.document-stopped    = Stopped
-status.document-tovalidate = To Validate
-status.document-valid      = Valid
-status.entity-archived     = Archived
-status.entity-refused      = Refused
-status.entity-simulation   = Simulation
-status.entity-stopped      = Stopped
-status.entity-tovalidate   = To Validate
-status.entity-valid        = Valid
+status.document-archived             = Archived
+status.document-mandatory-archived   = Archived
+status.document-mandatory-refused    = Refused
+status.document-mandatory-simulation = Simulation
+status.document-mandatory-stopped    = Stopped
+status.document-mandatory-tovalidate = To Validate
+status.document-mandatory-valid      = Valid
+status.document-refused              = Refused
+status.document-simulation           = Simulation
+status.document-stopped              = Stopped
+status.document-tovalidate           = To Validate
+status.document-valid                = Valid
+status.entity-archived               = Archived
+status.entity-refused                = Refused
+status.entity-simulation             = Simulation
+status.entity-stopped                = Stopped
+status.entity-tovalidate             = To Validate
+status.entity-valid                  = Valid
 
 type.bcpg_entityListItem = Entity list item
 type.bcpg_linkedValue    = Linked values
