Fix #23404 - [Feature] Add document formulation

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
@@ -55,6 +55,7 @@ status.entity-valid                  = Valid
 type.bcpg_entityListItem = Entity list item
 type.bcpg_linkedValue    = Linked values
 type.bcpg_listValue      = List values
+type.document            = Document
 type.ext1_customType     = Custom type
 type.rep_reportTpl       = Report template
 type.sec_aclGroup        = ACL permissions
