--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -123,7 +123,6 @@ data.list.import                              = Import
 data.list.importfailed                        = Import failed
 data.list.importlog                           = Logs
 data.list.importsamples                       = Samples
-data.list.scoreCriterion                      = Score criteria
 data.list.importsucceeded                     = Import succeeded
 data.list.importtodo                          = Import to do
 data.list.importtotreat                       = Import to treat
@@ -243,6 +242,7 @@ data.list.resourceParam                       = Resource parameters
 data.list.resourceParamList                   = Resource parameters list
 data.list.resourceparamtypes                  = Resource parameter types
 data.list.resourceproduct_hierarchy           = Hierarchy of resources
+data.list.scoreCriterion                      = Score criteria
 data.list.scoreList                           = Scores
 data.list.securitylist                        = Security lists
 data.list.sellingunitofmeasure                = Units of measure used for the Invoice
@@ -354,6 +354,8 @@ message.formulate.clp.forbidden                       = Forbidden classification
 message.formulate.comparewith.formulate.entity.error  = Cannot formulate entity to compare with: {0}
 message.formulate.cost.formulated                     = Formulation
 message.formulate.costList.error                      = Error formulating cost ''{0}'': - {1}
+message.formulate.document.error                      = Error formulating document ''{0}'': - {1}
+message.formulate.document.mandatory                  = Mandatory document ''{0}'' missing
 message.formulate.empty_req_geo_origin_list           = Specifications are incompatible : required geographic origins for requirement ''{0}'' have no common element
 message.formulate.formula.error                       = Error in formula ''{0}''
 message.formulate.formula.incorrect.nutrientProfile   = Error calculating nutrient profile : {0}
