InProgress #5742 - [Feature] Added tertiaryPackagingTypeCode

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -288,6 +288,7 @@ gs1_gs1Model.property.gs1_targetMarketCode.title                                
 gs1_gs1Model.property.gs1_temperatureMeasurementUnit.title                                = Temperature unit
 gs1_gs1Model.property.gs1_tertiaryDepth.title                                             = Depth (mm)
 gs1_gs1Model.property.gs1_tertiaryNetWeight.title                                         = Net weight pallet (kg)
+gs1_gs1Model.property.gs1_tertiaryPackagingTypeCode.title                                 = Type of logistical unit
 gs1_gs1Model.property.gs1_tertiaryWeight.title                                            = Gross weight pallet (kg)
 gs1_gs1Model.property.gs1_tertiaryWidth.title                                             = Width (mm)
 gs1_gs1Model.property.gs1_tradeItemCompositionDepth.description                           = The number of child-items that are packaged from front to back in a trade unit. This information is used in the space process, especially when allocating whole trade units (intermediate) into the shelf
