Fix #23404 - [Feature] Add Document export + document category + fix init repo + help destpath

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -37,6 +37,7 @@ path.controlunits                        = Control units
 path.costs                               = Costs
 path.customscodes                        = Customs Codes
 path.datacarriertypecode                 = Types of barcode
+path.documentcategories                  = Document categories
 path.documenttypes                       = Document types
 path.dutyfeetaxagencycodes               = Tax agencies
 path.dutyfeetaxcategorycodes             = Tax categories
@@ -51,6 +52,7 @@ path.exportciteopro                      = Export packaging materials (Citeo Pro
 path.exportclientscorelist               = Export client scores
 path.exportclientsurvey                  = Export client surveys
 path.exportcompositionpackaging          = Export composition and packaging lists
+path.exportdocuments                     = Export documents
 path.exportdynamiccharactlist            = Export list of calculated characteristics
 path.exportforbiddening                  = Export forbidden ingredients
 path.exportinglist                       = Export ingredients
