--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -33,6 +33,7 @@ becpg.forms.help.compoListProduct                              = Select the ingr
 becpg.forms.help.compoListQtySubFormula                        = Enter the quantity in the composition.
 becpg.forms.help.compoListYieldPerc                            = Enter the cooking yield.
 becpg.forms.help.contractDate                                  = Enter minimum commitment to the client term
+becpg.forms.help.docTypeDestPath                               = Path of the document in the entity. If empty: ./SupplierDocuments/
 becpg.forms.help.dropPackagingOfComponents                     = Check if component packaging is discarded. The tare of the packaging will not be taken into account.
 becpg.forms.help.eanCode                                       = Enter product GTIN/EAN code
 becpg.forms.help.eanCodeLevel2                                 = Enter package GTIN/EAN code
