Fix #27410 - [Feature] dutyFeeTaxAgencyCode

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -36,6 +36,7 @@ path.controlunits                        = Control units
 path.costs                               = Costs
 path.customscodes                        = Customs Codes
 path.datacarriertypecode                 = Types of barcode
+path.dutyfeetaxagencycodes               = Tax agencies
 path.dutyfeetaxes                        = Taxes
 path.eco                                 = Change orders
 path.ecoreports                          = ECO reports
