--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -90,6 +90,7 @@ data.list.customsCode                         = Customs Codes
 data.list.datacarriertypecode                 = Types of barcode
 data.list.deliverableList                     = Deliverables
 data.list.dutyFeeTax                          = Taxes
+data.list.dutyfeetaxagencycodes               = Tax agencies
 data.list.dynamicCharactList                  = Calculated characteristics
 data.list.eco                                 = Change orders
 data.list.ecoreports                          = ECO reports
