--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -111,6 +111,7 @@ gs1_gs1Model.property.gs1_discontinuedDateTime.description                      
 gs1_gs1Model.property.gs1_discontinuedDateTime.title                                      = Discontinued Date Time
 gs1_gs1Model.property.gs1_dutyFeeTaxAmount.title                                          = Tax amount
 gs1_gs1Model.property.gs1_dutyFeeTaxAmountUnit.title                                      = Unit
+gs1_gs1Model.property.gs1_dutyFeeTaxAgencyCode.title                                      = Tax agency
 gs1_gs1Model.property.gs1_dutyFeeTaxCategoryCode.title                                    = Type of tax
 gs1_gs1Model.property.gs1_dutyFeeTaxCode.description                                      = Identification of the type of duty or tax or fee applicable to the trade item. This will vary by target market.
 gs1_gs1Model.property.gs1_dutyFeeTaxCode.title                                            = Code
