Fix #5742 - [Feature] GS1 volume formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -263,6 +263,7 @@ gs1_gs1Model.property.gs1_secondaryNetWeight.title                              
 gs1_gs1Model.property.gs1_secondaryPackagingTypeCode.title                                = Type of logistical unit
 gs1_gs1Model.property.gs1_secondaryStackingFactor.title                                   = Number of pallets on ground (stacking)
 gs1_gs1Model.property.gs1_secondaryStackingMaxWeight.title                                = Stacking maximum weight (kg)
+gs1_gs1Model.property.gs1_secondaryVolume.title                                           = Volume (L)
 gs1_gs1Model.property.gs1_secondaryWeight.title                                           = Gross weight case (kg)
 gs1_gs1Model.property.gs1_secondaryWidth.title                                            = Width (mm)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.description                                = Describes the measurement used for selling unit of the trade item to the end consumer. A trade item may have only one unit of measure
@@ -289,6 +290,7 @@ gs1_gs1Model.property.gs1_temperatureMeasurementUnit.title                      
 gs1_gs1Model.property.gs1_tertiaryDepth.title                                             = Depth (mm)
 gs1_gs1Model.property.gs1_tertiaryNetWeight.title                                         = Net weight pallet (kg)
 gs1_gs1Model.property.gs1_tertiaryPackagingTypeCode.title                                 = Type of logistical unit
+gs1_gs1Model.property.gs1_tertiaryVolume.title                                            = Volume (L)
 gs1_gs1Model.property.gs1_tertiaryWeight.title                                            = Gross weight pallet (kg)
 gs1_gs1Model.property.gs1_tertiaryWidth.title                                             = Width (mm)
 gs1_gs1Model.property.gs1_tradeItemCompositionDepth.description                           = The number of child-items that are packaged from front to back in a trade unit. This information is used in the space process, especially when allocating whole trade units (intermediate) into the shelf
@@ -319,6 +321,7 @@ gs1_gs1Model.property.gs1_vintage.description                                   
 gs1_gs1Model.property.gs1_vintage.title                                                   = Vintage (YYYY)
 gs1_gs1Model.property.gs1_vintner.description                                             = The person hired by a winery or wine company who is responsible for many of the processes in the preparation, taste and quality of the wine produced. The science of wine making is referred to as oenology. The vintner is the oenologist. 
 gs1_gs1Model.property.gs1_vintner.title                                                   = Vintner
+gs1_gs1Model.property.gs1_volume.title                                                    = Volume (L)
 gs1_gs1Model.property.gs1_weight.title                                                    = Gross weight (kg)
 gs1_gs1Model.property.gs1_width.title                                                     = Width (mm)
 gs1_gs1Model.type.gs1_alcoholBeverageContainer.description                                = List of alcohol beverage containers
