--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.111</version>	
+    <version>4.2.3.112-SNAPSHOT</version>	
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
